--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 body {
-    background:#bf0978 ;
+    background: #b4bc5f;
     color: #bf0978;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     letter-spacing: 2px;
-    }
-img {border-radius:3%;}
-   
+}
+
+img {
+    border-radius: 3%;
+}
+
 .profile-picture {
     display: block;
     margin-left: auto;
@@ -14,14 +17,15 @@ img {border-radius:3%;}
     margin-top: 10%;
     height: auto;
     max-width: 300px;
-    }
-    .profile-name {
+}
+
+.profile-name {
     text-align: center;
     padding: 20px;
-    color:#ffffff
-    }
+    color: #ffffff
+}
 
-    .links {
+.links {
     text-align: center;
     margin-top: 20px;
     padding: 20px;
@@ -32,22 +36,22 @@ img {border-radius:3%;}
     margin-left: auto;
     margin-right: auto;
     border-radius: 40px;
-    }
-    
-    a {
+}
+
+a {
     text-decoration: none;
     color: #ffffff;
     transition: color 1s;
-    }
-    
-    .bottom-text {
+}
+
+.bottom-text {
     text-align: centre;
     margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
-    }
-    
-    a:hover {
+}
+
+a:hover {
     color: #000000;
     background: #fff;
-    }
+}
