Fixing duncan's sabbotage

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #b4bc5f;
+    background: #fff;
     color: #bf0978;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
