Change font to Poppins

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background: #fff;
     color: #bf0978;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     letter-spacing: 2px;
 }
