--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background: #fff;
-    color: #bf0978;
+    color: #fff;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     letter-spacing: 2px;
@@ -36,11 +36,12 @@ img {
     margin-left: auto;
     margin-right: auto;
     border-radius: 40px;
+    background-color:#bf0978
 }
 
 a {
     text-decoration: none;
-    color: #bf0978
+    color: #fff
     transition: color 1s;
 }
 
@@ -52,6 +53,6 @@ a {
 }
 
 a:hover {
-    color: #fff;
-    background: #bf0978;
+    color: #bf0978 ;
+    background:#fff ;
 }
